Pull up following revision(s) (requested by snj in ticket #206): 	sys/dev/ppbus/ppbus_base.c: revision 1.20 PR/49281: John D. Baker: fix debugging format XXX: pullup 7